New strategy for collapse: forget bootstrap, just hide the div.  Back to just setting the id on the elastic body div insteading of creating a wrap div

--- a/src/suicustom.css
+++ b/src/suicustom.css
@@ -12,4 +12,11 @@
 .sui-layout-header {  
   border-bottom: 0px;
 }    
-  
+
+/* new classes (not from ES) */
+
+.sui-collapse-hide {  
+  display: none;
+}
+.sui-collapse-show {  
+}
