--- a/src/suicustom.css
+++ b/src/suicustom.css
@@ -13,6 +13,15 @@
   border-bottom: 0px;
 }    
 
+.sui-facet {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+  line-height: 1.5;
+  font-weight: 400;
+  margin: 0;
+  padding: 0;
+  border: 0;
+}
+
 /* new classes (not from ES) */
 
 .sui-collapse-hide {  
@@ -20,3 +29,22 @@
 }
 .sui-collapse-show {  
 }
+
+.sui-facet-access {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+  line-height: 1.5;
+  font-weight: 400;
+  margin: 0;
+  padding: 0;
+  border: 0;
+}
+.sui-facet-legend {  
+  font-size: 12px;
+  color: #8b9bad;
+  letter-spacing: 1px;
+  padding: 0;
+  margin-top: 32px;
+  display:inline-block;
+}
+
+
